Optimize for Java 8 and legacy versions, add README and plugin.yml